@@ -13,8 +13,8 @@ Author: Kenneth Benoit [aut, cre],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
 Maintainer: Kenneth Benoit <kbenoit@lse.ac.uk>
-Version: 0.9.3-12
-Date: 2016-02-08
+Version: 0.9.3-13
+Date: 2016-02-09
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
 License: GPL-3
@@ -77,6 +77,7 @@ Collate:
     'stopwords.R'
     'syllables.R'
     'textfile.R'
+    'textmodel-NB.R'
     'textmodel-ca.R'
     'textmodel-generics.R'
     'textmodel-wordfish.R'
