@@ -53,11 +53,14 @@ S3method(ntype,dfm)
 S3method(ntype,tokenizedTexts)
 S3method(plot,dfm)
 S3method(plot,kwic)
+S3method(predict,textmodel_NB_fitted)
 S3method(predict,textmodel_wordscores_fitted)
 S3method(print,corpus)
 S3method(print,kwic)
 S3method(print,settings)
 S3method(print,similMatrix)
+S3method(print,textmodel_NB_fitted)
+S3method(print,textmodel_NB_predicted)
 S3method(print,textmodel_wordfish_fitted)
 S3method(print,textmodel_wordscores_fitted)
 S3method(print,textmodel_wordscores_predicted)
@@ -158,6 +161,7 @@ export(stopwords)
 export(syllables)
 export(textfile)
 export(textmodel)
+export(textmodel_NB)
 export(textmodel_ca)
 export(textmodel_wordfish)
 export(textmodel_wordscores)
