@@ -21,7 +21,7 @@ textmodel(x, y = NULL, data = NULL, model = c("wordscores", "NB",
 
 \item{y}{for supervised models, a vector of class labels or values for 
 training the model, with \code{NA} for documents to be excluded from the 
-training set; for unsupervised models, this will be left NULL}
+training set; for unsupervised models, this will be left \code{NULL}.}
 
 \item{data}{dfm or data.frame from which to take the formula}
 
@@ -39,7 +39,10 @@ probabilities.}
 
 \item{\code{wordfish}}{Fits the "wordfish" model of Slapin and Proksch (2008).}
 
-\item{\code{lda}}{Fit a topic model based on latent Dirichlet allocation.  Temporarily removed.}
+\item{\code{lda}}{Fit a topic model based on latent Dirichlet allocation.  
+Not yet implemented -- use \code{\link{convert}}
+to convert a dfm into the applicable input format and then use your favourite 
+topic modelling package directly.}
 
 \item{\code{kNN}}{k-nearest neighbour classification, coming soon.}
 }}
